# dfk-transaction-tracker

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  temp.txt  wallet1.txt  wallet2.txt
api/migrations/: 0001_initial.py  0002_rename_transactionsyncrhonization_transactionsynchronization_and_more.py
api/tests/: test_transaction_synchronization_view.py
api/views/: transaction_syncrhonization.py
dfk_transaction_tracker/: __init__.py  production.py  settings.py  urls.py  wsgi.py
dfk_transaction_tracker/dfk_transaction_tracker/: asgi.py  celery.py  settings.py
dfk_transaction_tracker/test/: main.py  requirement.txt  transaction_hash.py  transactions.py
scripts/: build-docker-images.sh  push-docker-images.sh  start-celery.sh  start-django-prod.sh
static/js/: wallet_address_post.js
static/scss/: base.scss  internal_server_error.scss  landing_page.scss  transactions_get.scss  wallet_address_post.scss
tracker/: .models.py.swp  .tasks.py.swp  models.py  tasks.py  urls.py
tracker/migrations/: 0001_initial.py  0002_alter_transactionsynchronization_table.py  0003_wallet_transaction.py  0004_remove_wallet_heroes_remove_wallet_lp_balance_and_more.py  0004_transaction_from_mapped_transaction_to_mapped.py  0005_rename_wallet_address_transaction_wallet_and_more.py  0006_transaction_status.py
tracker/presenters/: transaction_paginator.py  transaction_presenter.py
transaction_processor/: TODO.txt  main.py  mywallet.txt  sell_overlan.txt  temp.txt  test.txt
(+169 files in other folders)
