[tool.poetry]
name = "dfk-transaction-tracker"
version = "0.1.0"
description = "A web application for viewing transactions made in the DeFi Kingdoms game"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0"
psycopg2 = "2.9.2"
django-environ = "0.8.1"
celery = {version = "5.2.1", extras = ["redis"]}
web3 = "5.25.0"
django-compressor = "3.1"
pandas = "1.3.5"
pyhmy = {git = "https://github.com/tmnhat2001/pyhmy.git", rev = "6ff5555499150f23d6f3da7feca5769757f0cd5b"}

[tool.poetry.dev-dependencies]
pytest-django = "4.5.2"
django-libsass = "0.9"
rich = "10.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
